# cleanmeter-native

./: .gitignore  CMakeLists.txt  build.bat  example_usage.bat  test_build.cpp
include/: windows_headers.h
src/: CMakeLists.txt  main.cpp
src/graphics/: CMakeLists.txt  graphics_base.h  graphics_factory.cpp  graphics_factory.h
src/graphics/dx10/: CMakeLists.txt  dx10_graphics.cpp  dx10_graphics.h
src/graphics/dx11/: CMakeLists.txt  dx11_graphics.cpp  dx11_graphics.h
src/graphics/dx12/: CMakeLists.txt  dx12_graphics.cpp  dx12_graphics.h
src/graphics/dx9/: CMakeLists.txt  dx9_graphics.cpp  dx9_graphics.h
src/overlay/: CMakeLists.txt  dllmain.cpp  hook_manager.cpp  hook_manager.h
